# scikit-rf

./: .binstar.yml  .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.txt  CITATION.cff  INSTALL.txt  LICENSE.txt  MANIFEST.in  README  README.md  README.rst  README.txt  S2P_Swapping.py  TODO.rst  circuit.py  constants.py  example_rf_demo.py  ez_setup.py  gen_changelog.py  instances.py  mwavepy.py  network.py  network2.py  networkSet.py  nose.cfg  plotting.py  pyproject.toml  pytest.ini  readthedocs-environment.yml  readthedocs.yml  requirements.txt  requirements_dev.txt  setup.py  taper.py  time.py  tlineFunctions.py  (+2 more)
.github/: FUNDING.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-issue-.md
.github/workflows/: PR_labeler.yml  codeql.yml  ensure_clean_notebook.yml  flake8.yml  linting.yml  publish.yml  test_notebooks.yml  testing.yml  testing_nightly.yml  testing_notebooks.yml  urlchecker.yml
apps/: plotTool.py  spreadsheetExporter.py  touchstonePlotter.py
calibration/tests/: match.s1p  test_calibrationSet.py
conda.recipe/: meta.yaml  release_commands.txt
data/: ro,2.s1p  skrf.mplstyle  skrf2_wide.mplstyle  wr2p2,delayshort.s1p
doc/: Makefile  README.txt  gh-pages.py  mwavepy.frequency.html  mwavepy.html  mwavepy.network.html  mwavepy.pythics_instruments.html  mwavepy.pythics_instruments.vna.html  mwavepy.transmissionLine.freeSpace.html  mwavepy.transmissionLine.functions.html  mwavepy.transmissionLine.genericTEM.html  mwavepy.transmissionLine.html  mwavepy.transmissionLine.rectangularWaveguide.html  mwavepy.transmissionLine.rectangularWaveguideTE10.html  mwavepy.workingBand.html  mwavepy_manual.lyx  mwavepy_manual.lyx~
doc/api/: generate_docs.py  mwavepy.beta.html  mwavepy.beta.mobius.html  mwavepy.beta.onePortCalibrationGui.html  mwavepy.beta.plot.html  mwavepy.beta.testCases.html  mwavepy.calibration.html  mwavepy.calibrationAlgorithms.html  mwavepy.convenience.html  mwavepy.discontinuities.html  mwavepy.discontinuities.variationalMethods.html  mwavepy.frequency.html  mwavepy.html  mwavepy.mathFunctions.html  mwavepy.media.cpw.html  mwavepy.media.distributedCircuit.html  mwavepy.media.freespace.html  mwavepy.media.html  mwavepy.media.media.html  mwavepy.media.rectangularWaveguide.html  mwavepy.network.html  mwavepy.parameterizedStandard.html  mwavepy.plotting.html  mwavepy.testCases.html  mwavepy.testCases.testCalibration.html  mwavepy.testCases.testMedia.html  mwavepy.testCases.testNetwork.html  mwavepy.testCases.testTransmissionLine.html  mwavepy.testCases.testWorkingBand.html  mwavepy.tlineFunctions.html  mwavepy.touchstone.html  mwavepy.transmissionLine.coax.html  mwavepy.transmissionLine.freeSpace.html  mwavepy.transmissionLine.functions.html  mwavepy.transmissionLine.genericTEM.html  mwavepy.transmissionLine.html  mwavepy.transmissionLine.rectangularWaveguide.html  mwavepy.transmissionLine.rectangularWaveguideTE10.html  mwavepy.virtualInstruments.futekLoadCell.html  mwavepy.virtualInstruments.generalSocketReader.html  (+2 more)
doc/manual/: mwavepy_manual.lyx  mwavepy_manual.lyx~
doc/source/: .gitignore  Makefile  api.rst  conf-bootstrap.py  conf-standard.py  conf.py  examples.rst  glossary.rst  index.rst  license.rst  reference.rst  slow_intro.rst  tutorials.rst
doc/sphinx/: make.bat
doc/sphinxext/: apigen.py  comment_eater.py  compiler_unparse.py  docscrape.py  docscrape_sphinx.py  inheritance_diagram.py  ipython_directive.py  notebooks_to_rst.py  numpydoc.py  phantom_import.py  plot_directive.py  setup.py  traitsdoc.py  visa.py
examples/: example1.py  matplotlibrc  readme.txt  scriptingExample1.py  scriptingExample2.py  waveguideLossChart.py
examples/basicTouchstonePlotting/: Return Loss (Mag).eps  Return Loss (Phase).eps  Return Loss (Unwrapped Phase).eps  Return Loss, Polar.eps  Return Loss, Smith.eps  Return Loss.eps  basicTouchstonePlotting.py
examples/basic_touchstone_plotting/: README.txt  plot_horn_mag.py  plot_horn_phase.py  plot_horn_smith.py  plot_ringslot.py  plot_ringslot_mag.py  plot_ringslot_phase.py  plot_ringslot_simulated_mag.py  plot_ringslot_simulated_vs_measured.py  plot_ringslot_smith.py
examples/lna_noise_example/: LNA Example.ipynb
examples/mwavepy_basic_touchstone_plotting/: README.txt
examples/mwavepy_oneport_calibration_example/: cal.py
examples/oneportCalibration/: error_network.s2p  oneportCalibration.py
examples/oneport_calibration_example/: README.txt  cal.py
examples/vnaNoiseAnalysis/: noiseAnalysis.py  recordTouchstoneFiles.py
io/: __init__.py  csv.py  general.py
media/: circuit.py  cpw.py  freespace.py  mline.py
mwavepy/: __init__.py  calibration.py  calibrationAlgorithms.py  calibrationFunctions.py  constants.py  convenience.py  createNetwork.py  frequency.py  frequencyBand.py  mathFunctions.py  media.py  mobius.py  network.py  networkSet.py  parameterizedStandard.py  plotting.py  rectangularWaveguide.py  testCases.py  tlineFunctions.py  touchstone.py  transmissionLine.py  workingBand.py
programs/: plot_touchstone.py
pythics_instruments/: defaults.txt  plotTouchtone.html
qtapps/: data_grabber.py  multiline_trl.py  nist_trl.py  skrf_qtapps_py35.yml  widget_test.py
requirements/: base.pip  docs.pip  rtd.pip  vi.pip
skrf/: __init__.py  base_network.py  circuit.py  constants.py  convenience.py  frequency.py  helper.py  instances.py  mathFunctions.py  multiNetworkSystem.py  multiNoisyNetworkSystem.py  network.py  network2.py  networkNoiseCov.py  networkSet.py  noisyNetwork.py  p3k.py  plotting.py  qfactor.py  taper.py  time.py  tlineFunctions.py  touchstone.py  util.py  vectorFitting.py  widgets.py
skrf_qtapps/: README  data_grabber.py  multiline_trl.py  nist_trl.py  widget_test.py  windows_shortcuts.py
tests/: Port1_path.s2p.txt  cst_example_6ports.s6p  hfss_18.2.s3p  hfss_threeport_MA.s3p  hfss_threeport_MA_without_gamma_z0_50Ohm.s3p  ntwk_arbitrary_frequency.s2p  test_frequency.py  test_noise_deembed.py  test_util.py  thru.s2p.txt
tools/: travis-requirements.txt
vi/: __init__.py
(+1403 files in other folders)
