[project]
name = "scikit-rf"
dynamic = ["version"]
description = "Object Oriented Microwave Engineering"
requires-python = ">=3.8"
authors = [
    {name="Alex Arsenovic", email="alexanderarsenovic@gmail.com"}
]
license = {text="LICENSE.txt"}
readme = "README.md"

keywords = [
    "engineering",
    "electronics",
    "microwave-engineering",
    "radio-frequency",
    "touchstone"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    ]

dependencies = [
    "numpy >=1.21",
    "scipy >=1.7",
    "pandas >=1.1",
    "typing-extensions",
    "pre-commit>=3.5.0",
]

[project.optional-dependencies]
test = [
    "pytest >=7.0",
    "pytest-mock >= 3.10",
    "pytest-xdist >= 3.5.0",
    "coverage >=6.0",
    "pytest-cov >=4.0",
]

testspice = [
    "pyspice >= 1.5",
]

plot = [
    "matplotlib >=3.5"
]

xlsx = [
    "openpyxl >=3.0"
]

netw = [
    "networkx >= 2.0"
]

visa = [
    "PyVISA >= 1.12",
    "pyvisa-py >= 0.6"
]

docs = [
    "ipython >=7",
    "ipykernel >=6.15",
    "ipywidgets >=8.0.2",
    "python-ivi >=0.14.9",
    "nbval >=0.9",
    "jupyter-client >=7.3.5",
    "sphinx-rtd-theme >=1.0",
    "sphinx >=4",
    "nbsphinx >= 0.8.9",
    "openpyxl >= 3"
]

[project.urls]
homepage = "https://scikit-rf.org/"
repository = "https://github.com/scikit-rf/scikit-rf"
documentation = "https://scikit-rf.readthedocs.io/en/latest/"

[build-system]
requires = [
  "setuptools >= 64",
  "wheel",
]
build-backend = "setuptools.build_meta"


[tool.setuptools]
# license-files = ["LICENSE.txt"]  # tempfix bug in setuptool
license-files = []

[tool.setuptools.dynamic]
version = {attr = "skrf.__version__"}

[tool.setuptools.packages.find]
include = ["skrf*"]

[tool.setuptools.package-data]
skrf = ["data/*.s*p", "data/*.cal", "data/*.mplstyle"]

[tool.pytest.ini_options]
testpaths = [
    "skrf",
    "doc/source/examples",
    "doc/source/tutorials"
]
addopts = "--cov=skrf --ignore-glob='*.ipynb_checkpoints' --ignore=doc/source/tutorials/VirtualInstruments.ipynb"
norecursedirs = [
    "skrf/src",
    "doc/source/examples/instrumentcontrol"
]
filterwarnings = [
    "error",
]

[tool.ruff]
# larger line length for rule E501 (default is 88)
line-length = 120

[tool.ruff.lint]
select = ["B", "E", "F", "FA", "I", "NPY", "UP", "W"]

# Ignore some rules for all files
# E741: ambiguous-variable-name
# UP031: Use format specifiers instead of percent format
ignore = ["E741", "UP031"]

[tool.ruff.lint.per-file-ignores]
# Ignore some rules for some specific files
# E402: imports at the beginning of file
# F401: unused-import
# F841: unused-variable
"__init__.py" = ["E402", "F401", "F403", "F405"]
"apps/*" = ["F403", "F405"]
"doc/source/conf.py" = ["E402"]
"doc/sphinxext/tests/test_docscrape.py" = ["E402", "F403", "F405"]
"*/tests/*.py"=["B018", "F841"]
